# web-core

./: .gitignore  .infisical.json  .mise.toml  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  README.md  SECURITY.md  add_more_tests.py  coverage.json  coverage.xml  fix_test.py  pre_commit_instructions  pyproject.toml  renovate.json  runner_replacement.py  runner_section.txt  test_cache_diff.patch  test_sigterm_class.txt  test_sigterm_patch.txt  test_sim117_patch.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: cd.yml  ci.yml
.jules/: bolt.md  sentinel.md
scripts/: preserve-diacritics.py  test_preserve_diacritics.py
src/web_core/: __init__.py
src/web_core/adapters/: __init__.py  google_drive.py  mangadex.py
src/web_core/browsers/: __init__.py  patchright.py  protocol.py
src/web_core/http/: __init__.py  client.py  client.py.orig  url.py
src/web_core/scraper/: __init__.py  agent.py  base.py  cache.py  registry.py  robots.py  selector_inference.py  state.py  utils.py
src/web_core/scraper/strategies/: __init__.py  api_direct.py  basic_http.py  captcha.py  headless.py  patchright_browser.py  tls_spoof.py
src/web_core/search/: __init__.py  client.py  client.py.orig  models.py  runner.py
tests/: conftest.py
tests/test_adapters/: test_google_drive.py  test_google_drive.py.diff  test_mangadex.py
tests/test_browsers/: test_patchright.py  test_protocol.py
tests/test_http/: test_client.py  test_url.py
tests/test_scraper/: test_agent.py  test_agent_inference.py  test_base.py  test_cache.py  test_registry.py  test_robots.py  test_selector_inference.py  test_state.py  test_utils.py
tests/test_scraper/test_strategies/: test_api_direct.py  test_basic_http.py  test_captcha.py  test_headless.py  test_patchright_strategy.py  test_tls_spoof.py
tests/test_search/: test_client.py  test_models.py  test_port_kill.py  test_runner.py  test_runner_kill.py  test_runner_security.py  test_security_fix.py  test_sigterm_kill.py
