[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "web-core"
version = "0.1.0"
description = "Shared web infrastructure: search, scraping, HTTP security, browsers"
requires-python = ">=3.13,<3.14"
license = "MIT"
authors = [{ name = "n24q02m" }]
dependencies = [
    "httpx>=0.28.1",
    "curl-cffi>=0.9.1",
    "crawl4ai>=0.6.3",
    "langgraph>=0.6.11",
    "patchright>=1.52.0",
    "browserforge>=1.2.4",
    "capsolver>=1.0.7",
    "pydantic>=2.12.5",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.4.1",
    "pytest-asyncio>=1.0.0",
    "pytest-cov>=6.2.1",
    "ruff>=0.11.12",
    "ty>=0.0.1a10",
]

[tool.hatch.build.targets.wheel]
packages = ["src/web_core"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py313"
line-length = 120
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM", "RUF"]

[tool.coverage.run]
source_pkgs = ["web_core"]

[tool.coverage.report]
fail_under = 95
