[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "n24q02m-web-core"
version = "0.1.0"
description = "Shared web infrastructure: search, scraping, HTTP security, browsers"
readme = "README.md"
requires-python = ">=3.13,<3.14"
license = "MIT"
authors = [{ name = "n24q02m" }]
keywords = ["web", "scraping", "search", "searxng", "http", "ssrf", "crawl4ai"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.13",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "httpx>=0.28.1",
    "curl-cffi>=0.9.1",
    "crawl4ai>=0.6.3",
    "langgraph>=0.6.11",
    "patchright>=1.52.0",
    "browserforge>=1.2.4",
    "capsolver>=1.0.7",
    "pydantic>=2.12.5",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.4.1",
    "pytest-asyncio>=1.0.0",
    "pytest-cov>=6.2.1",
    "pytest-timeout>=2.4.0",
    "ruff>=0.11.12",
    "ty>=0.0.1a10",
]

[project.urls]
Repository = "https://github.com/n24q02m/web-core"

[tool.hatch.build.targets.wheel]
packages = ["src/web_core"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-m 'not integration and not live' --timeout=30"

[tool.ruff]
target-version = "py313"
line-length = 120
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM", "RUF"]

[tool.ty.rules]
unresolved-import = "ignore"
unresolved-attribute = "ignore"
invalid-assignment = "ignore"
invalid-argument-type = "ignore"

[tool.semantic_release]
version_toml = ["pyproject.toml:project.version"]

[tool.coverage.run]
source_pkgs = ["web_core"]
branch = true

[tool.coverage.report]
fail_under = 95
exclude_lines = [
    "pragma: no cover",
    "if sys.platform",
    "if __name__",
    "raise ImportError",
    "except ImportError",
]
